--- a/paper/CHI-extended-abstract.tex
+++ b/paper/CHI-extended-abstract.tex
@@ -78,11 +78,12 @@ We designed the game to be casual. Consequently:\\
 \end{itemize}
 
 \subsection{Manual user}
-This manual user can also be found on the login page so that they know what commands to use ingame.\\
-
-Use right and left arrow for walking in a direction.\\
-Space for jumping.\\
-Right click for opening your portal on "white" walls ("black" walls cannot be targeted).
+This manual user can also be found on the login page so that they know what commands to use ingame.
+\begin{itemize}
+\item Use right and left arrow for walking in a direction.
+\item Space for jumping.
+\item Right click for opening your portal on "white" walls ("black" walls cannot be targeted).
+\end{itemize}
 
 \section{Implementation Details}
 
