--- a/paper/CHI-extended-abstract.tex
+++ b/paper/CHI-extended-abstract.tex
@@ -85,11 +85,15 @@ Space for jumping.\\
 Right click for opening your portal on "white" walls ("black" walls cannot be targeted).
 
 \section{Implementation Details}
+\subsection{Network implementation}
+
+
+\subsection{Game mechanics implementation}
 
 
 \section{Design Evolution}
 \subsection{During the game coding}
-
+During the development of the game, we focused on the mechanics rather than the graphics. As neither of us is a game graphist, we switched from the mechanics to the graphics near the end of the game development. This means than we had to move from a seamless idea of the graphics to a much more basic way of handle them. Additionaly, we had no IDE nor framework specifically designed to help us with the graphics. For that reason, we reduced the scope of the graphics handling (eg, the player does not move in a natural manner).
 
 \subsection{Designing the levels}
 Once the game was operational, we started to work on the level design. We easily came up with 3 levels, but once they were implemented, finding new interesting designs of our own was pretty difficult. We came to understand that coding a game and actually implementing an interesting user experience are two very distinct areas. That is why we decided to stick with 3 levels as a good start for further work on the game.
