--- a/paper/CHI-extended-abstract.tex
+++ b/paper/CHI-extended-abstract.tex
@@ -14,7 +14,7 @@
   	\textbf{Cédric Guillot}\\
   	\affaddr{University of Calgary}\\
   	\affaddr{Calgary, CA T2N 1N4 Canada}\\
-  	\email{cedricson@ucalgary.ca}
+  	\email{cpguillo@ucalgary.ca}
   }
 }
 
