--- a/paper/CHI-extended-abstract.tex
+++ b/paper/CHI-extended-abstract.tex
@@ -135,6 +135,13 @@ The network features were implemented in the time that we had planed for. Howeve
 Once the game was operational, we started to work on the level design. We easily came up with 3 levels, but once they were implemented, finding new interesting designs of our own was pretty difficult. We came to understand that coding a game and actually implementing an interesting user experience are two very distinct areas. That is why we decided to stick with 3 levels as a good start for further work on the game.
 
 \section{Discussion and Conclusion}
+During the game implementation, we learnt the difference between the general game design (the mechanics) and the level as a unit that requires an additional amount of effort to come up with a decent user experience.
+\newline
+Moreover, the graphics are a central part of any play designed for computers, and we would have liked to have a graphic artist in our team in order to provide a convincing aesthetic feeling to the game.
+\newline
+As far as the gameplay is concerned, dividing the central element of the game (teleportation) between the players was successful to reach a high level of cooperation.
+\newline
+In the future, we believe that the game could be improved by designing a couple of additional levels to provide a higher interest for players. Adding a timer could also add an additional challenge for the players that already completed all the levels.
 
 \balance
 \bibliographystyle{acm-sigchi}
