--- a/paper/CHI-extended-abstract.tex
+++ b/paper/CHI-extended-abstract.tex
@@ -1,4 +1,5 @@
 \documentclass{chi-ext}
+\usepackage[utf8x]{inputenc}
 \copyrightinfo{ }
 
 \title{Duo-Portal, a two-player HTML5 cooperative game}
@@ -68,7 +69,6 @@ We designed the game to be casual. Consequently:\\
 \end{itemize}
 
 \subsection{Manual user}
-This manual user can also be found on the login page so that they know what commands to use ingame.
 \begin{itemize}
 \item Use right and left arrow for walking in a direction.
 \item Space for jumping.
